<resources>
    <string name="app_name">Pawprints</string>
    <string name="title_predictedlocation">예상위치</string>
    <string name="title_matching">매칭</string>
    <string name="title_home">홈</string>
    <string name="title_map">지도</string>
    <string name="title_mypage">내정보</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>