<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_predictedlocation"
        android:name="com.swuproject.pawprints.ui.predictedlocation.PredictedlocationFragment"
        android:label="@string/title_predictedlocation"
        tools:layout="@layout/fragment_predictedlocation" />

    <fragment
        android:id="@+id/navigation_matching"
        android:name="com.swuproject.pawprints.ui.matching.MatchingFragment"
        android:label="@string/title_matching"
        tools:layout="@layout/fragment_matching" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.swuproject.pawprints.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.swuproject.pawprints.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_mypage"
        android:name="com.swuproject.pawprints.ui.mypage.MypageFragment"
        android:label="@string/title_mypage"
        tools:layout="@layout/fragment_mypage" />
</navigation>